sign in, log in and dashboard frontend merged

--- a/smetro/views/test.ejs
+++ b/smetro/views/test.ejs
@@ -6,33 +6,61 @@
 
 </head>
 <body>
-  
-  <!-- Button trigger modal -->
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Launch demo modal
-</button>
+  <section class="banner" id="top">
+    <%-include('./partials/nav') %> 
+    <div class="containerd">
+      <section class="vh-100" style="background-color: #375668; margin-top: -50px;">
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+              <div class="card" style="border-radius: 1rem;">
+                <div class="row g-0">
+                  <div class="col-md-6 col-lg-5 d-none d-md-block">
+                    <img src="../img/metro2.jpg" alt="login form" class="img-fluid fit-section-image"
+                      style="border-radius: 1rem 0 0 1rem;" />
+                  </div>
+                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                    <div class="card-body p-4 p-lg-5 text-black">
+      
+                      <!-- Rest of the form code -->
+                      <form action="/user/userlogin" method="post">
+      
+                        <div class="d-flex align-items-center mb-3 pb-1">
+                          <i class="fas fa-train fa-2x me-3" style="color: #ff6219;"></i>
+                          <span class="h1 fw-bold mb-0">SMetro</span>
+                          
+                        </div>
+      
+                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+      
+                        <div class="form-outline mb-4">
+                          <input type="text" class="form-control form-control-lg" maxlength="50" id="email" name="email"
+                          aria-describedby="emailHelp" required/>
+                          <label class="form-label" for="email">Email address</label>
+                        </div>
+      
+                        <div class="form-outline mb-4">
+                        <input type="password" maxlength="23" class="form-control form-control-lg"  id="password" name="password" required>
+                          <label class="form-label" for="password">Password</label>
+                        </div>
+      
+                        <div class="pt-1 mb-4">
+                          <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                        </div>
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/user/usersignup"
+                            style="color: #393f81;">Register here</a></p>
+                      </form>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-  </div>
-</div>
+</section>
 
 </body>
 
