--- a/smetro/views/user/usersignup.ejs
+++ b/smetro/views/user/usersignup.ejs
@@ -3,60 +3,93 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <%-include('../partials/header') %>
 
     <title>SignUp</title>
 </head>
 
-<body>
+<section class="vh-200" style="background-color: #20315e; margin-top: -10px;">
     <%-include('../partials/nav') %>
+        <div class="container py-5 h-100" style="max-width: 90%;">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+              <div class="col col-xl-10">
+                <div class="card" style="border-radius: 1rem;">
+                  <div class="row g-0">
+                    <div class="col-md-7 col-lg-6 d-none d-md-block">
+                      <img src="../img/metro3.jpg" alt="login form" class="img-fluid fit-section-image" style="border-radius: 1rem 0 0 1rem; height: 100%;" />
+                    </div>
+                    <div class="col-md-5 col-lg-6 d-flex align-items-center">
+                      <div class="card-body p-4 p-lg-5 text-black">
+      
 
-    <div class="container my-4">
-        <h1 class="text-center">Signup to SMetro</h1>
-        <form action="/user/usersignup" method="post">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" maxlength="20" class="form-control" id="username" name="username"
-                    aria-describedby="emailHelp" placeholder="Not email" required>
+
+
+                    <!-- Rest of the form code -->
+                    <form action="/user/usersignup" method="post">
+      
+                        <div class="d-flex align-items-center mb-3 pb-1">
+                          <i class="fas fa-train fa-2x me-3" style="color: #ff6219;"></i>
+                          <span class="h1 fw-bold mb-0">SMetro</span>
+                          
+                        </div>
+      
+                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Registration info</h5>
+      
+                        <div class="form-outline mb-4">
+                            <label for="username">Username</label>
+                            <input type="text" maxlength="20" class="form-control" id="username" name="username"
+                                aria-describedby="emailHelp" placeholder="Not email" required>
+                        </div>
+      
+                        <div class="form-outline mb-4">
+                            <label for="usernid">NID</label>
+                            <input type="text" maxlength="20" class="form-control" id="usernid" name="usernid"
+                                aria-describedby="emailHelp" placeholder="" required>
+                        </div>
+                        <div class="form-outline mb-4">
+                            <label for="userphone">phone</label>
+                            <input type="tel" class="form-control" id="phone" name="userphone" maxlength="11" pattern="[0-9]{11}" placeholder="01XXXXXXXXX(Use only digits)" required>
+                                    </div>
+                        <div class="form-outline mb-4">
+                            <label for="email">Email</label>
+                            <input type="email" maxlength="50" class="form-control" id="useremail" name="useremail"
+                                ariadescribedby="emailHelp" required>
+            
+                        </div>
+                        <div class="form-outline mb-4">
+                            <label for="userpassword">Password</label>
+                            <input type="password" maxlength="23" class="form-control" id="userpassword" name="userpassword" required>
+                        </div>
+                        <div class="form-outline mb-4">
+                            <label for="cuserpassword">Confirm Password</label>
+                            <input type="password" maxlength="23" class="form-control" id="cuserpassword" name="cuserpassword" required>
+                                <small id="emailHelp" class="form-text text-muted">Make sure to type the same password</small>
+                        </div>
+      
+                        <div class="pt-1 mb-4">
+                          <button class="btn btn-dark btn-lg btn-block" type="submit">Register</button>
+                        </div>
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Already have an account? <a href="/user/usersignup"
+                          style="color: #393f81;">Log in here</a></p>
+                    </form>
+
+
+
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Are you an admin? <a href="/admin/adminsignup"
+                        style="color: #393f81;">Click Here</a></p>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </section>
+      
 
-            <div class="form-group">
-                <label for="usernid">NID</label>
-                <input type="text" maxlength="20" class="form-control" id="usernid" name="usernid"
-                    aria-describedby="emailHelp" placeholder="" required>
-            </div>
 
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" maxlength="50" class="form-control" id="useremail" name="useremail"
-                    aria-describedby="emailHelp" required>
-            </div>
-
-            <div class="form-group">
-                <label for="userphone">phone</label>
-                <input type="tel" class="form-control" id="phone" name="userphone" maxlength="11" pattern="[0-9]{11}" placeholder="01XXXXXXXXX(Use only digits)" required>
-            </div>
-
-            <div class="form-group">
-                <label for="userpassword">Password</label>
-                <input type="password" maxlength="23" class="form-control" id="userpassword" name="userpassword" required>
-            </div>
-            <div class="form-group">
-                <label for="cuserpassword">Confirm Password</label>
-                <input type="password" maxlength="23" class="form-control" id="cuserpassword" name="cuserpassword" required>
-                <small id="emailHelp" class="form-text text-muted">Make sure to type the same password</small>
-            </div>
-
-            <button type="submit" class="btn btn-primary">SignUp</button><br><br>
-        </form>
-        <a class="btn btn-success" href="/admin/adminsignup"><h7>Sign up as admin</h7></a>
-
-    </div>
+    <%-include('../partials/footer') %>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
