--- a/smetro/views/partials/nav.ejs
+++ b/smetro/views/partials/nav.ejs
@@ -1,25 +1,33 @@
-    <style>
-        .navbar-dark .navbar-nav .nav-link {
-            color: #05061f;
-        }
-        .green-letter {
-            color: green;
-        }    
-        .metro-text {
-            color: #05061f;
-        }
-    </style>
+<style>
+    .navbar-dark .navbar-nav .nav-link {
+        color: #ffffff;
+    }
+    .green-letter {
+        color: rgb(228, 96, 44);
+        font-size: xx-large;
+    }    
+    .metro-text {
+        color: #dddddd;
+    }
+    .navbar {
+        background-color: #142246d5;
+    }
+    .navbar-nav .nav-item.active {
+        margin-left: 28px;
+    }
+</style>
 
-
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-transparent">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+    
+    <i class="fas fa-train fa-2x me-3" style="color: #ff1919;"> </i>
     <a class="navbar-brand" href="/">
         <span class="green-letter">S</span><span class="metro-text">Metro</span>
     </a>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <span class="navbar-toggler-icon"></span>
+</button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item active">
@@ -34,8 +42,8 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Services
-                </a>
+                Services
+            </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
@@ -56,36 +64,72 @@
 
 
 
-
-<%if(typeof error != 'undefined'){
-    error.forEach(error => {
-        %>
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>Sorry!</strong> <%=error.message%>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+<% if (typeof error !== 'undefined') {
+    error.forEach((error) => { %>
+        <div class="modal fade show" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="errorModalLabel">Sorry!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <%= error.message %>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
-        <%
-    }) %>
-    <%
+        </div>
+        <script>
+            $(document).ready(function () {
+                $('#errorModal').modal('show');
+                setTimeout(function () {
+                    $('#errorModal').modal('hide');
+                }, 3000);
+            });
+        </script>
+    <% });
     delete error;
 } %>
 
-<%if(typeof no_err != 'undefined'){
-    no_err.forEach(no_err => {
-        %>
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Success!</strong> <%=no_err.message%>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+<% if (typeof no_err !== 'undefined') {
+    no_err.forEach((no_err) => { %>
+        <div class="modal fade show" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="successModalLabel">Success!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <%= no_err.message %>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
-        <%
-    }) %>
-    <%
+        </div>
+        <script>
+            $(document).ready(function () {
+                $('#successModal').modal('show');
+                setTimeout(function () {
+                    $('#successModal').modal('hide');
+                }, 3000);
+            });
+        </script>
+    <% });
     delete no_err;
 } %>
+
+
+
 
 
 
