--- a/Demo Frontend/muaz/bookticket.ejs
+++ b/Demo Frontend/muaz/bookticket.ejs
@@ -209,11 +209,11 @@
                 <% }%>
                     <h6 class="text-center">Please Confirm a ticket</h6>
         </div>
-
-        <div class="card shadow mb-4 my-2">
-            <div class="card-header py-3">
-                <h3 class="m-0 font-weight-bold text-info text-center">Ticket List</h3>
-            </div>
+        <div class="container">
+        <div class="row">
+        <div class="col-lg-10 mx-auto">
+        <div class="career-search mb-60">
+        <div class="filter-result">
             <% results.rows.forEach(function(train) { %>
                 <div class="job-box d-md-flex align-items-center justify-content-between mb-30">
                     <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
@@ -260,7 +260,11 @@
                         </div>
                     </div>
                 </div>
-                <% }); %>
+            <% }); %>
+        </div>
+        </div>
+        </div>
+        </div>
         </div>
 
 
