--- a/Demo Frontend/muaz/tickethistory.ejs
+++ b/Demo Frontend/muaz/tickethistory.ejs
@@ -28,7 +28,7 @@
             <div class="col-lg-10 mx-auto">
             <div class="career-search mb-60">
             <div class="filter-result">
-            <% results.rows.forEach(function(train) { %>
+            <% results.rows.forEach(function(data) { %>
                 <div class="job-box d-md-flex align-items-center justify-content-between mb-30">
                     <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
                         <!-- <div class="img-holder mr-md-4 mb-md-0 mb-4 mx-auto mx-md-0 d-md-none d-lg-flex">
