--- a/smetro/views/admin/adminsignup.ejs
+++ b/smetro/views/admin/adminsignup.ejs
@@ -9,7 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    
+        <%-include('../partials/header') %>
     <title>Admin signUp</title>
 </head>
 
@@ -60,6 +61,8 @@
             <button type="submit" class="btn btn-primary">SignUp</button><br><br>
         </form>
     </div>
+    <%-include('../partials/footer') %>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
