--- a/smetro/views/partials/navadmin.ejs
+++ b/smetro/views/partials/navadmin.ejs
@@ -38,33 +38,66 @@
     </div>
     </nav>
 
-    <%if(typeof error != 'undefined'){
-        error.forEach(error => {
-            %>
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <strong>Sorry!</strong> <%=error.message%>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+    <% if (typeof error !== 'undefined') {
+        error.forEach((error) => { %>
+            <div class="modal fade show" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="errorModalLabel">Sorry!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <%= error.message %>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
                 </div>
-            <%
-        }) %>
-        <%
+            </div>
+            <script>
+                $(document).ready(function () {
+                    $('#errorModal').modal('show');
+                    setTimeout(function () {
+                        $('#errorModal').modal('hide');
+                    }, 3000);
+                });
+            </script>
+        <% });
         delete error;
-        delete no_err;
     } %>
-
-    <%if(typeof no_err != 'undefined'){
-        no_err.forEach(no_err => {
-            %>
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong>Success!</strong> <%=no_err.message%>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+    
+    <% if (typeof no_err !== 'undefined') {
+        no_err.forEach((no_err) => { %>
+            <div class="modal fade show" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="successModalLabel">Success!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <%= no_err.message %>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
                 </div>
-            <%
-        }) %>
-        <%
+            </div>
+            <script>
+                $(document).ready(function () {
+                    $('#successModal').modal('show');
+                    setTimeout(function () {
+                        $('#successModal').modal('hide');
+                    }, 3000);
+                });
+            </script>
+        <% });
         delete no_err;
     } %>
