register and verify booking merged

--- a/smetro/views/test.ejs
+++ b/smetro/views/test.ejs
@@ -2,70 +2,76 @@
 <html lang="en">
 
 <head>
-    <%-include('../partials/header') %>
-    <title>Refund Portal</title>
-    <style>
-      .bg-image {
-        background-image: url('../img/metro4.jpg');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 100vh;
-      }
-      .mask {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.7);
-    }
-      </style>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>SignUp</title>
 </head>
 
 <body>
-  
-  <%-include('../partials/navlogged') %>
-  <div id="intro-example" class="p-5 text-center bg-image">
-    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7)">
-      <div class="d-flex justify-content-center align-items-center h-100">
-        <div class="text-white">
-          <h1 class="mb-3">Refund Ticket</h1>
-          <%if(typeof no_err != 'undefined'){
-            no_err.forEach(no_err => {
-                %>
-                <h5 class="mb-4">
-                    <%= no_err.message %>
-                </h5> 
-                <%
-            }) %>
+    <%-include('../partials/nav') %>
+    <%if(typeof error != 'undefined'){
+        error.forEach(error => {
+            %>
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong>Sorry!</strong> <%=error.message%>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
             <%
-                delete no_err;
-            } %>
-        
-            <%if(typeof error != 'undefined'){
-                error.forEach(error => {
-                    %>
-                        <h5 class="mb-4">
-                            <%= error.message %>
-                        </h5>       
-                    <%
-                }) %>
+        }) %>
+        <%
+        delete error;
+        delete no_err;
+    } %>
+
+    <%if(typeof no_err != 'undefined'){
+        no_err.forEach(no_err => {
+            %>
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>Success!</strong> <%=no_err.message%>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
             <%
-                delete error;
-            } %>
-  
-          <a class="btn btn-outline-light btn-lg m-2" href="/user/dashboard" target="_blank" role="button">Return to dashboard</a>
-        </div>
-      </div>
+        }) %>
+        <%
+        delete no_err;
+    } %>
+
+    <div class="container my-4">
+        <h3 class="text-center">An email would be send to your provided email <%=useremail%>.
+            Please provide the otp for sign up.</h3>
+        <form action="/user/register" method="post">
+            
+            <div class="form-group">
+                <label for="uservarcode">Varification Code</label>
+                <input type="text" maxlength="23" class="form-control" id="userotp" name="uservarcode" required>
+
+                <input type="hidden" maxlength="20" class="form-control" id="username" name="username" value=<%=username%>
+                    aria-describedby="emailHelp" placeholder="Not email" required>
+                <input type="hidden" maxlength="20" class="form-control" id="usernid" name="usernid" value=<%=usernid%>
+                    aria-describedby="emailHelp" placeholder="" required>
+                <input type="hidden" maxlength="50" class="form-control" id="useremail" name="useremail" value=<%=useremail%>
+                    aria-describedby="emailHelp" required>
+                <input type="hidden" class="form-control" id="phone" name="userphone" value=<%=userphone%>
+                    maxlength="11" pattern="[0-9]{11}" placeholder="01XXXXXXXXX(Use only digits)" required>
+                <input type="hidden" maxlength="23" class="form-control" id="userpassword" name="userpassword" 
+                value=<%=userpassword%> required>
+                <input type="hidden" maxlength="23" class="form-control" id="userotp" name="userotp" 
+                value=<%=userotp%> required>
+            </div>
+
+            <button type="submit" class="btn btn-primary">SignUp</button><br><br>
+        </form>
     </div>
-  </div>
-  
-<!--Background image  -->
-      
-
-
-    <%-include('../partials/footer') %>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
